--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Rosa Isela Palma <rosaislp@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
